<resources>
    <string name="app_name">School App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="our_goals">Our Goals</string>
    <string name="to_ensure_a_positive_and_productive_physical_and_cultural_environment_n_to_advance_excellence_in_teaching_n_to_effectively_enhance_communication_to_excel_in_the_collaborative_process">To ensure a positive and productive physical and cultural environment   To advance excellence in teaching   To effectively enhance communication to excel in the collaborative process</string>
    <string name="from_principal_s_desk_n_mr_abc_xyz_n_mcom_bed_n_joined_this_school_on_25th_january_2012">From Principal\'s desk:   Mr.abc_xyz   Mcom,Bed   Joined this school on 25th january 2012</string>
    <string name="todo">todo</string>
    <string name="abt">What distinguishes a great school from a good school? I believe that clarity of purpose, exceptional teachers, and demonstrated outcomes are hallmarks of great schools. A great school is a place with a deep commitment to student learning, where faculty nourish the intellectual, moral, emotional, and social growth of every student. It is a place where students, teachers, and parents embark together on an academic journey with clear and well-defined objectives. It is filled with the joy of discovery and the excitement of personal challenge and growth. It is a community dedicated to developing strength of character and excellence in all dimensions of its students\' lives. And it is a place that has a distinctive and lasting impact.</string>
    <string name="everyone_should_learn_everyday">Everyone should learn Everyday</string>

    <string name="aAnda"><![CDATA[Academics & Achievements]]></string>
    <string name="awards">awards</string>
    <string name="students_achievements">Students Achievements:</string>
    <string name="ach">Priyanshi Gupta of Class XI has secured All India Rank 90 and Regional Rank 10 in the merit of 19th Junior Mathematical Olympiad(JMO) 2016 organized by School Head Quarters,New Delhi.</string>

    <string name="notification_text">Tracking, tap to cancel</string>
    <string name="everyone_learns_everyday">Everyone Learns Everyday</string>
    <string name="mission">Mission</string>
    <string name="our_goal">Our Goal</string>
    <string name="textview">TextView</string>
    <string name="text_view">TextView</string>

    <string name="to_ensure_a_positive_and_productive_physical_and_cultural_environment_nto_advance_excellence_in_teaching_nto_effectively_enhance_communication_to_excel_in_the_collaborative_process">\nTo ensure a positive and productive, physical and cultural environment. \n\nTo advance excellence in teaching. \n\nTo effectively enhance communication to excel in the collaborative process.</string>
    <string name="img">img</string>

    <string name="annual">Annual</string>
    <string name="detail">Every event at our School is an opportunity for students to showcase their talents and capabilities and learn new skills. The programmes we organise include Annual Day, Sports Day, Christmas Carnival and many other festive activities.</string>
    <string name="_1_annual_day_celebrations">1. Annual Day Celebrations</string>
    <string name="_2_children_s_day_celebrations">2. Children\'s Day Celebrations</string>
    <string name="_3_christmas_day_celebrations">3. Christmas Day Celebrations</string>
    <string name="_4_diwali_celebrations">4. Diwali Celebrations</string>
    <string name="_5_earth_day_celebrations">5. Earth Day Celebrations</string>
    <string name="_6_environment_day_celebrations">6. Environment Day Celebrations</string>
    <string name="children">Children</string>
    <string name="christmas">Christmas</string>
    <string name="diwali">Diwali</string>
    <string name="earth">earth</string>
    <string name="environment">Environment</string>



    <string name="title_activity_maps">Map</string>


</resources>
