<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:layout_marginTop="44dp"
    android:background="@drawable/a"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/noti1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/_1_annual_day_celebrations"
        android:textSize="30sp" />


    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/_2_children_s_day_celebrations"
        android:textSize="30sp" />
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/_3_christmas_day_celebrations"
        android:textSize="30sp" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/_4_diwali_celebrations"
        android:textSize="30sp" />




</LinearLayout>
</ScrollView>